# feicia

./: README_简单LLM聊天.md  simple_llm_chat.py
2026.3月  废才Seedance 2.0 AI 分镜师团队/character_action/: README.md  pyproject.toml  requirements-native.txt
2026.3月  废才Seedance 2.0 AI 分镜师团队/character_action/configs/: dev.yaml  prod.yaml
2026.3月  废才Seedance 2.0 AI 分镜师团队/character_action/logs/: run-log.jsonl
2026.3月  废才Seedance 2.0 AI 分镜师团队/character_action/schemas/: book.schema.json  chapter.schema.json  character.schema.json  evidence.schema.json  qa_finding.schema.json  relation.schema.json  review_task.schema.json
2026.3月  废才Seedance 2.0 AI 分镜师团队/character_action/tests/: test_chunking.py  test_llm_client.py  test_llm_extract.py  test_merge_review.py  test_pipeline.py  test_preprocess.py  test_qa_rules.py  test_relation_engine.py  test_schema_tools.py  test_security.py  test_storage.py
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/: .agent-state.json  README.md  as  project-config.json  pyproject.toml  （飞薯）.txt
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/agents/: art-designer.md  storyboard-artist.md
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/assets/: character-prompts.md  scene-prompts.md
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/docs/: codex-project-config-guide.md  gitignore-readme-guide.txt
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/feicai_seedance/: __init__.py
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/logs/: review-log.jsonl  run-log.jsonl
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/script/: show-claude-config.ps1
2026.3月  废才Seedance 2.0 AI 分镜师团队/orgin_document/tests/: test_acceptance_and_reviews.py  test_artifact_utils.py  test_asset_registry.py  test_llm_client.py  test_pipeline_integration.py  test_security.py  test_status.py  test_utils.py
2026.3月  废才Seedance 2.0 AI 分镜师团队/video_only_once_phase1/: README.md  pyproject.toml
2026.3月  废才Seedance 2.0 AI 分镜师团队/video_only_once_phase1/tests/: test_contracts.py  (+2 more)
2026.3月  废才Seedance 2.0 AI 分镜师团队/zeomeng/: .gitignore  pyproject.toml
(+614 files in other folders)
