[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-action"
version = "0.1.0"
description = "Novel character extraction workspace for VideoOnlyOnce upstream preprocessing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
character-action = "character_action.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
