[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feicai-seedance"
version = "0.1.0"
description = "Local executable pipeline for Feicai Seedance 2.0 AI storyboard workflow."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
feicai-seedance = "feicai_seedance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
