[project]
name = "video-only-once-phase1"
version = "0.1.0"
description = "Unified integration workspace for VideoOnlyOnce phase 1"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
